Добавлено удаление/добавление оставшихся материалов в базе при изменениях в потраченных материалах

--- a/StorageProject/Views/Home/Index.cshtml
+++ b/StorageProject/Views/Home/Index.cshtml
@@ -29,3 +29,6 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+@Html.ActionLink("Материалы", "Index", "Materials")
+@Html.ActionLink("Техника", "Index", "Technics")
+@Html.ActionLink("Использованные материалы", "Index", "UsedMaterials")
