Добавлены все необходимые функции

--- a/StorageProject/Views/Home/About.cshtml
+++ b/StorageProject/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "О программе";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Склады промышленных предприятий – неотъемлемая часть общего технологического процесса производства, которое формирует организационные, технические и экономические требования к складской системе, устанавливает цели и условия ее оптимального функционирования. Правильно организованное складское хозяйство способствует повышению ритмичности и организованности производства; сохранению качества продукции, материалов, сырья; улучшению использования занимаемых территорий; повышению эффективности работы транспорта; высвобождению работников от непроизводительных погрузочно-разгрузочных и складских работ для использования их в основном технологическом процессе.     </p>
