--- a/StorageProject/Views/Technics/Create.cshtml
+++ b/StorageProject/Views/Technics/Create.cshtml
@@ -1,11 +1,10 @@
-﻿@model StorageProject.Models.Materials
+﻿@model StorageProject.Models.Technics
 
 @{
-    ViewBag.Title = "Добавить материал";
+    ViewBag.Title = "Добавить технику";
 }
 
 <h2>@ViewBag.Title</h2>
-
 
 @using (Html.BeginForm()) 
 {
@@ -24,14 +23,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Добавить" class="btn btn-default" />
             </div>
@@ -42,7 +33,3 @@
 <div>
     @Html.ActionLink("Вернуться к списку", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
