--- a/StorageProject/Views/Technics/Details.cshtml
+++ b/StorageProject/Views/Technics/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model StorageProject.Models.Materials
+﻿@model StorageProject.Models.Technics
 
 @{
     ViewBag.Title = "Подробнее";
@@ -16,14 +16,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Quantity)
         </dd>
 
     </dl>
