--- a/StorageProject/Views/UsedMaterials/Create.cshtml
+++ b/StorageProject/Views/UsedMaterials/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model StorageProject.Models.UsedMaterial
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавить запись";
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UsedMaterial</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку", "Index")
 </div>
 
 @section Scripts {
