--- a/StorageProject/Views/UsedMaterials/Delete.cshtml
+++ b/StorageProject/Views/UsedMaterials/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model StorageProject.Models.UsedMaterial
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить запись";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены, что хотите удалить запись об израсходованном материале?</h3>
 <div>
-    <h4>UsedMaterial</h4>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -49,8 +49,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            @Html.ActionLink("Вернуться к списку", "Index")
         </div>
     }
 </div>
