--- a/StorageProject/Views/UsedMaterials/Details.cshtml
+++ b/StorageProject/Views/UsedMaterials/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model StorageProject.Models.UsedMaterial
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Подробнее";
 }
 
-<h2>Details</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
-    <h4>UsedMaterial</h4>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -46,5 +46,5 @@
 </div>
 <p>
 
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку", "Index")
 </p>
