--- a/StorageProject/Views/UsedMaterials/Index.cshtml
+++ b/StorageProject/Views/UsedMaterials/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<StorageProject.Models.UsedMaterial>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Израсходованные материалы";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Добавить запись", "Create")
 </p>
+<input type="text" id="txtsearch" placeholder="Enter date" />
 <table class="table">
     <tr>
         <th>
@@ -42,8 +43,8 @@
         </td>
         <td>
 
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Подробнее", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
